[metadata]
name=pymechtatel
version=0.0.1-snapshot
author=maeda6uiui
description=Python binding of the Mechtatel engine
long_description=file: README.md
license=MIT

[options]
package_dir=
    =src
packages=find:
python_requires=>=3.7
install_requires=
    py4j==0.10.9.7

[options.packages.find]
where=src
